kubernetes/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  namespace: data-management
  name: datatomb-deployment
  labels:
    app: datatomb
spec:
  replicas: 1
  strategy:
    type: RollingUpdate 
  selector:
    matchLabels:
      app: datatomb
  template:
    metadata:
      labels:
        app: datatomb
    spec:
      containers:
      - name: datatomb
        image: gitlab.spang-lab.de:4687/containers/datatomb:0.1.7
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: config
          mountPath: /usr/src/app/config
        - name: datatomb-store
          mountPath: /datastore
        livenessProbe:
          httpGet:
            path: /api/v1/healthy
            port: http
        readinessProbe:
          httpGet:
            path: /api/v1/healthy
            port: http
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: config
        configMap:
          name: datatomb-config
      - name: datatomb-store
        persistentVolumeClaim:
          claimName: data-store-pvc
      securityContext:
        runAsUser: 1000
