kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: data-management 
  name: datatomb
  labels:
    app: datatomb
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: datatomb
