kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: datatomb-ingress
  namespace: data-management 
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 2G
spec:
  rules:
  - host: data.spang-lab.de
    http:
      paths:
      - backend:
          serviceName: datatomb
          servicePort: 80
  tls:
  - hosts:
      - data.spang-lab.de
    secretName: data-spang-lab-tls
